Made 70% of the project (still needs responsive)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.slick-dots > .slick-active{
+  width: fit-content;
+  background-color: black !important;
+  border-radius: 100%;
+}
